# mandelbrust

./: Cargo.toml  README.md
benches/: pixel_rendering.rs
src/: main.rs  utils.rs
